# marketos

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.python  PROJECT_SNAPSHOT.md  docker-compose.yml  main.py  mise.toml  package-lock.json  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20260418104814_init_v2/: migration.sql
prisma/migrations/20260502061351_restructure_schema_product_url_embedding_semantic/: migration.sql
services/api_gateway/: main.py
services/common/: __init__.py  celery_app.py  db.py  gcs_utils.py  models.py  pyproject.toml  schemas.py
services/embedding_svc/: main.py  pyproject.toml
services/matcher_svc/: main.py  pyproject.toml  threshold.py
services/scraper_svc/: celery_beat.py  extractor.py  helpers.py  main.py  pyproject.toml  scraper.py  semantics.py
shared/: pyproject.toml
shared/src/shared/: connect.py
shared/src/shared/events/: __init__.py
shared/src/shared/models/: __init__.py
shopify_ui/: .eslintrc.cjs  .gitignore  mise.toml  package-lock.json  package.json  prisma.config.ts  shopify.app.market-pricing.toml  shopify.web.toml
shopify_ui/app/routes/: app._index.jsx  app.additional.jsx  app.controller.jsx  app.jsx  app.matches.jsx  webhooks.products.create.jsx  webhooks.products.delete.jsx  webhooks.products.update.jsx
shopify_ui/prisma/: schema.prisma
shopify_ui/prisma/migrations/20260416143936_add_product_model/: migration.sql
shopify_ui/scripts/: vectorize.py
shopify_ui/web/api/: auth.js
shopify_ui/web/webhooks/: inventory.js  products.js
(+9 files in other folders)
