[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mathe", email = "mathewsparan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg>=3.3.3",
    "redis>=7.4.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
